--- a/flask/finance/templates/sell.html
+++ b/flask/finance/templates/sell.html
@@ -1,22 +1,25 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Buy
+Sell
 {% endblock %}
 
 {% block main %}
-<form action="{{ url_for('buy') }}" method="post">
+<form action="{{ url_for('sell') }}" method="post">
     <fieldset>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="stock" placeholder="Stock Symbol"
-                type="text" />
+            <select name="stock">
+                {% for stock in stocks %}
+                <option value="{{ stock }}">{{ stock.upper() }}</option>
+                {% endfor %}
+            </select>
         </div>
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="shares" placeholder="# of Shares"
                 type="number" min="1" />
         </div>
         <div class="form-group">
-            <button class="btn btn-default" type="submit">Buy</button>
+            <button class="btn btn-default" type="submit">Sell</button>
         </div>
     </fieldset>
 </form>
